--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "mini-css-extract-plugin": "^1.6.0",
     "path": "^0.12.7",
     "postcss-loader": "^5.2.0",
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.6.0",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
@@ -32,7 +32,7 @@
     "url": "git+https://github.com/whatdidudolinda/web_project_4.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Linda Huynh",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/whatdidudolinda/web_project_4/issues"
