--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "* [Link to the project in Github](https://whatdidudolinda.github.io/web_project_4/)",
   "main": "index.js",
   "dependencies": {
-    "core-js": "^3.11.3"
+    "core-js": "^3.11.3",
+    "mini-css-extract-plugin": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -16,7 +17,6 @@
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
-    "mini-css-extract-plugin": "^1.6.0",
     "path": "^0.12.7",
     "postcss-loader": "^5.2.0",
     "webpack": "^5.38.1",
