--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "* [Link to the project in Github](https://whatdidudolinda.github.io/web_project_4/)",
   "main": "index.js",
   "dependencies": {
+    "autoprefixer": "^10.2.6",
     "core-js": "^3.14.0",
     "mini-css-extract-plugin": "^1.6.0"
   },
