--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.4",
-    "cssnano": "^5.0.2",
+    "cssnano": "^5.0.6",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "path": "^0.12.7",
+    "postcss": "^8.3.4",
     "postcss-loader": "^5.2.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack serve"
+    "build": "rm -rf dist && webpack --mode production",
+    "dev": "webpack serve --mode development"
   },
   "repository": {
     "type": "git",
