--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "build": "rm -rf dist && webpack --mode production",
-    "dev": "webpack serve --mode development"
+    "build": "webpack --mode production",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
